--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,21 @@
 version: '3'
 services:
-  db:
-    image: mysql:5.7
-    environment:
-      MYSQL_ROOT_PASSWORD: password
-      MYSQL_USER: user
-      MYSQL_PASSWORD: 1234
-      MYSQL_DATABASE: greeting_db
-    volumes:
-      - mysql-data:/var/lib/mysql
-    ports:
-      - "4306:3306"
+  # db:
+  #   image: mysql:5.7
+  #   environment:
+  #     MYSQL_ROOT_PASSWORD: password
+  #     MYSQL_USER: user
+  #     MYSQL_PASSWORD: 1234
+  #     MYSQL_DATABASE: greeting_db
+  #   volumes:
+  #     - mysql-data:/var/lib/mysql
+  #   ports:
+  #     - "4306:3306"
 
   app:
     build: .
-    command: bundle exec puma -C config/puma.rb
+    # command: bundle exec puma -C config/puma.rb
+    command: bundle exec puma -C config/puma.rb -e production
     volumes:
       - .:/greeting
       - public-data:/greeting/public
@@ -29,9 +30,11 @@ services:
       - tmp-data:/greeting/tmp
     ports:
       - 80:80
+    depends_on:
+      - app
 
 volumes:
-  mysql-data:
+  # mysql-data:
   public-data:
   tmp-data:
   log-data:
